--- a/woocommerce.css
+++ b/woocommerce.css
@@ -593,9 +593,9 @@ body .woocommerce-customer-details address {
 /*--------------------------------------------------------------
 # Accessibility
 --------------------------------------------------------------*/
-
-/* Text meant only for screen readers. */
+.site-header-cart .widgettitle,
 .single-product div.product .entry-summary .price-label,
+.search-results:not(.post-type-archive) .site-main article.type-product .price-label,
 .product_list_widget .price-label {
 	border: 0;
 	clip: rect(1px, 1px, 1px, 1px);
@@ -606,6 +606,17 @@ body .woocommerce-customer-details address {
 	padding: 0;
 	width: 1px;
 	word-wrap: normal !important;
+}
+.woocommerce-product-gallery .woocommerce-product-gallery__trigger,
+abbr.required,
+.woocommerce-remove-coupon,
+.product-remove .remove,
+div.product .entry-summary > form.cart .reset_variations[style*="hidden"],
+.widget_price_filter .price_label,
+.woocommerce-mini-cart-item .remove_from_cart_button,
+ul.products li.product .added_to_cart,
+ul.products li.product .button {
+	font-size: 0;
 }
 /*--------------------------------------------------------------
 # Breadcrumb
