--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*!
 Theme Name: 		Conj Lite
-Theme URI: 			https://www.conj.ws/conj-lite
+Theme URI: 			https://www.conj.ws/lite
 Author: 			MyPreview
 Author URI: 		https://www.conj.ws
 Description: 		Meet Conj – a super-fast, super-lightweight and super-stylish theme with impressive usability, both on the front and back end for creating a stylish WooCommerce webshop or stunning company website with its unique mobile-first and grid-based architecture. Intuitive, flexible and compatible with the new Gutenberg block-based content editor — Demo → https://www.conj.ws/conj-lite
