--- a/woocommerce.css
+++ b/woocommerce.css
@@ -2640,7 +2640,7 @@ dl.variation dd > p {
 --------------------------------------------------------------*/
 .select2-container--default.select2 .selection .select2-selection--single,
 .select2-container--default.select2 .selection .select2-selection--multiple {
-	height: 46px;
+	height: 48px;
     border-radius: 0;
     border-width: 1px;
     border-style: solid;
@@ -2650,7 +2650,7 @@ dl.variation dd > p {
     -webkit-transition: border 0.3s ease;
     -o-transition: border 0.3s ease;
     transition: border 0.3s ease;
-	background-position: calc(100% - 20px) calc(1.3em + 2px), calc(100% - 15px) calc(1.3em + 2px), 100% 0;
+	background-position: calc(100% - 17.8px) calc(1.3em + 2px), calc(100% - 13px) calc(1.3em + 2px), 100% 0;
     background-size: 5px 5px, 5px 5px, 2.5em 2.5em;
     background-repeat: no-repeat;
 	outline: 0;
@@ -2694,6 +2694,20 @@ dl.variation dd > p {
 .form-row-wide {
 	clear: both;
 }
+.select2-container .select2-dropdown,
+.select2-container--open .select2-dropdown--below {
+	border-radius: 0;
+}
+.select2-container.select2-container--default .select2-selection--single .select2-selection__clear {
+    margin: 0 8px;
+}
+#main .woocommerce-variation-add-to-cart-disabled .button.disabled,
+.single_add_to_cart_button:hover {
+	background-color: transparent;
+}
+button.disabled {
+    cursor: not-allowed;
+}
 @media (min-width: 48.0625em) {
 	.woocommerce-EditAccountForm .form-row-first,
 	.woocommerce-address-fields__field-wrapper .form-row-first,
@@ -2703,6 +2717,7 @@ dl.variation dd > p {
 		float: left;
 		margin-right: 3.8%;
 	}
+	.woocommerce-checkout .lost_password,
 	.woocommerce-EditAccountForm .form-row-last,
 	.woocommerce-address-fields__field-wrapper .form-row-last,
 	.woocommerce-form-login .form-row-last,
@@ -2724,7 +2739,12 @@ dl.variation dd > p {
 		width: 48.1%;
 	}
 }
-
+@media (max-width: 48em) {
+	.woocommerce-checkout .lost_password {
+		padding-top: 5px;
+		margin-bottom: 0;
+	}
+}
 /*--------------------------------------------------------------
 # WooCommerce widgets
 --------------------------------------------------------------*/
